A bunch more updates around filtering, events and mutations.
Signed-off-by: magnayn <nigel.magnay@nirima.com>